--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "grammy": "latest"
+    "grammy": "latest",
+    "typescript": "latest",
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest"
   }
 }
